src/objects/Healthinsurances__x.object
<CustomObject>
    <description>Healthinsurances</description>
    <externalDataSource>Healthcareinsurances</externalDataSource>
    <externalName>Healthinsurances</externalName>
    <fields>
        <fullName>Launch_date__c</fullName>
        <description>Launch_date</description>
        <externalDeveloperName>Launch_date</externalDeveloperName>
        <label>Launch_date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Policy_id__c</fullName>
        <description>Policy_id</description>
        <externalDeveloperName>Policy_id</externalDeveloperName>
        <label>Policy_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Policy_name__c</fullName>
        <description>Policy_name</description>
        <externalDeveloperName>Policy_name</externalDeveloperName>
        <label>Policy_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>Healthinsurances</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Id</columns>
        <columns>Policy_id__c</columns>
        <columns>Policy_name__c</columns>
        <columns>ExternalId</columns>
        <columns>Launch_date__c</columns>
        <columns>DisplayUrl</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Healthinsurances</pluralLabel>
</CustomObject>